plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '2.7.18'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
//	toolchain {
//	}
//
//		languageVersion = JavaLanguageVersion.of(8)
//	}
	sourceCompatibility = JavaVersion.VERSION_1_8
	targetCompatibility = JavaVersion.VERSION_1_8
}
repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//openPDF
	implementation 'com.github.librepdf:openpdf:1.3.30'

	//jwt
	implementation "io.jsonwebtoken:jjwt:0.9.1"

	//swagger
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
}

bootWar {
	archiveBaseName = 'hisign_1'
	archiveVersion = '0.0.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
